--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,10 @@ version = "0.0.1"
 [deps]
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
+[compat]
+Unitful = "1"
+julia = "1"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
