Fix doctest setup

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -68,9 +68,9 @@ jobs:
             Pkg.instantiate()'
       - run: |
           julia --project=docs -e '
-            using Documenter: doctest
-            using Unitful
+            using Documenter: DocMeta, doctest
             using UnitfulEquivalences
+            DocMeta.setdocmeta!(UnitfulEquivalences, :DocTestSetup, :(using Unitful); recursive=true)
             doctest(UnitfulEquivalences)'
       - run: julia --project=docs docs/make.jl
         env:
