--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,3 +5,6 @@ UnitfulEquivalences = "da9c4bc3-91c8-4f02-8a40-6b990d2a7e0c"
 
 [compat]
 Documenter = "1"
+
+[sources.UnitfulEquivalences]
+path = ".."
